<?xml version="1.0" encoding="utf-8"?>

<!-- 001.2: Databing precisa que a tag raiz seja layout  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.LoginFragment">

    <!-- 001.4: Vincular dado  -->
    <data>
        <variable
            name="UserViewModel"
            type="com.materdei.pontodigital.viewmodel.UserViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_dark"
        >

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_desc_logo"
            android:scaleType="center"
            android:src="@drawable/splash"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_desc_background"
            android:scaleType="fitXY"
            android:src="@drawable/mater_dei"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <LinearLayout
            android:id="@+id/loginLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <EditText
                android:id="@+id/loginEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_layout"
                android:layout_marginBottom="@dimen/margin_layout"
                android:background="@color/white"
                android:hint="@string/login_hint_email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:padding="@dimen/margin_layout"
                android:text="@={UserViewModel.email}"
                android:textColorHint="#757575"
                android:autofillHints="" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_layout"
                android:layout_marginBottom="@dimen/margin_layout"
                android:background="@color/white"
                android:hint="@string/login_hint_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="@dimen/margin_layout"
                android:text="@={UserViewModel.password}"
                android:textColorHint="#757575"
                android:autofillHints="" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/saveLogin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/login_save"
                    android:textColor="@color/white"
                    app:layout_constraintHorizontal_weight="4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/loginButton"
                    app:layout_constraintHorizontal_bias="0"
                    />

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/login_button"
                    android:textColor="@color/black"
                    android:elevation="@dimen/elevation_btn"
                    android:backgroundTint="@color/green_light"
                    android:onClick="@{view -> UserViewModel.onClick(view)}"
                    app:layout_constraintHorizontal_weight="2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/saveLogin"
                    />

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/waitingLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/saveLogin"
                    android:indeterminate="true"
                    app:indicatorColor="@color/white"
                    app:trackThickness="4dp"
                    android:visibility="gone"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>