<?xml version="1.0" encoding="utf-8"?>

<!-- 001.2: Databing precisa que a tag raiz seja layout  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.PunchFragment">

    <!-- 001.4: Vincular dado  -->
    <data>
        <variable
            name="UserViewModel"
            type="com.materdei.pontodigital.viewmodel.AuthenticationViewModel" />
    </data>

    <!-- TODO 005.08: -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_desc_img_background"
            android:scaleType="fitXY"
            android:src="@drawable/mater_dei" />

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:contentDescription="@string/app_desc_logo"
            android:scaleY="0.7"
            android:scaleX="0.7"
            android:src="@drawable/mater_dei_logo"
            app:layout_constraintBottom_toTopOf="@id/punchLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="1"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/punchLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/actionLayout"
            app:layout_constraintTop_toBottomOf="@id/logoImageView"
            app:layout_constraintVertical_weight="1"
            >

            <androidx.cardview.widget.CardView
                android:id="@+id/punchCard"
                style="@style/Punch.Card"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                app:cardCornerRadius="10dp"
                android:elevation="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_layout"
                    >

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:alpha="0.1"
                        android:contentDescription="@string/app_desc_img_background"
                        android:scaleType="fitCenter"
                        android:src="@drawable/pattern"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/titleCard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/punch_card_title"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_marginBottom="@dimen/margin_layout"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/punchLinearLayout"
                        app:layout_constraintVertical_weight="1"
                        />

                    <LinearLayout
                        android:id="@+id/punchLinearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/titleCard"
                        app:layout_constraintVertical_weight="5"
                        >


                        <LinearLayout
                            android:id="@+id/cardInfoLayout"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:orientation="vertical"
                            android:layout_weight="4"
                            >

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/margin_layout"
                                android:layout_marginBottom="@dimen/margin_layout"
                                >

                                <TextView
                                    android:id="@+id/nameTitle"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:text="@string/punch_name"
                                    android:textColor="@color/black"
                                    android:textStyle="bold"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toStartOf="@id/nameWorker"
                                    app:layout_constraintHorizontal_weight="4"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <TextView
                                    android:id="@+id/nameWorker"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintHorizontal_weight="8"
                                    app:layout_constraintStart_toEndOf="@id/nameTitle"
                                    app:layout_constraintTop_toTopOf="parent"
                                    tools:text="Fulano de Beltrano" />

                            </androidx.constraintlayout.widget.ConstraintLayout>

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/margin_layout"
                                android:layout_marginBottom="@dimen/margin_layout"
                                >

                                <TextView
                                    android:id="@+id/punchTitle"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:text="@string/punch_type"
                                    android:textColor="@color/black"
                                    android:textStyle="bold"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toStartOf="@id/punchInfo"
                                    app:layout_constraintHorizontal_weight="4"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <TextView
                                    android:id="@+id/punchInfo"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintHorizontal_weight="8"
                                    app:layout_constraintStart_toEndOf="@id/punchTitle"
                                    app:layout_constraintTop_toTopOf="parent"
                                    tools:text="@string/punch_type_text" />

                            </androidx.constraintlayout.widget.ConstraintLayout>

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/margin_layout"
                                android:layout_marginBottom="@dimen/margin_layout"
                                >

                                <TextView
                                    android:id="@+id/dateTitle"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:text="@string/punch_date"
                                    android:textColor="@color/black"
                                    android:textStyle="bold"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toStartOf="@id/dateInfo"
                                    app:layout_constraintHorizontal_weight="4"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <TextView
                                    android:id="@+id/dateInfo"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintHorizontal_weight="8"
                                    app:layout_constraintStart_toEndOf="@id/dateTitle"
                                    app:layout_constraintTop_toTopOf="parent"
                                    tools:text="2022/07/05" />

                            </androidx.constraintlayout.widget.ConstraintLayout>

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/margin_layout"
                                >

                                <TextView
                                    android:id="@+id/timeTitle"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:text="@string/punch_time"
                                    android:textColor="@color/black"
                                    android:textStyle="bold"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toStartOf="@id/timeInfo"
                                    app:layout_constraintHorizontal_weight="4"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <TextView
                                    android:id="@+id/timeInfo"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintHorizontal_weight="8"
                                    app:layout_constraintStart_toEndOf="@id/timeTitle"
                                    app:layout_constraintTop_toTopOf="parent"
                                    tools:text="8:00 A.M." />

                            </androidx.constraintlayout.widget.ConstraintLayout>

                        </LinearLayout>

                        <ImageView
                            android:id="@+id/punchImage"
                            android:layout_width="0dp"
                            android:layout_height="60dp"
                            android:layout_margin="8dp"
                            android:orientation="vertical"
                            android:layout_weight="1"
                            android:src="@drawable/gowork"
                            android:scaleX="0.8"
                            android:scaleY="0.8"
                            android:layout_gravity="bottom"
                            android:contentDescription="@string/punch_img_desc" />

                    </LinearLayout>



                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <ProgressBar
                android:id="@+id/punch_loading"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:indeterminate="true"
                app:indicatorColor="@color/black"
                app:trackThickness="4dp"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/actionLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/punchLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_weight="1"
            >

            <Button
                android:id="@+id/punchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="@dimen/elevation_btn"
                android:text="@string/punch_button_text"
                android:textAppearance="?attr/textAppearanceButton"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/confirmPunch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:elevation="@dimen/elevation_btn"
                android:textAppearance="?attr/textAppearanceButton"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>




</layout>