<?xml version="1.0" encoding="utf-8"?>

<!-- TODO 004.09: cardview para apresentar os dados de punch no recyclerview workday em home fragment -->
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Punch.Card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/punchLabel"
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/cardPunchLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@color/red" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_layout"
            android:layout_weight="10">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:alpha="0.1"
                android:contentDescription="@string/app_desc_img_background"
                android:scaleType="centerInside"
                android:src="@drawable/pattern"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/cardInfoLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/punchImageLayout"
                app:layout_constraintHorizontal_weight="9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="10">

                    <TextView
                        android:id="@+id/nameTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/punch_name"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/nameWorker"
                        app:layout_constraintHorizontal_weight="3"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/nameWorker"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_weight="8"
                        app:layout_constraintStart_toEndOf="@id/nameTitle"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Fulano de Beltrano" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/dateTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/punch_data"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/dateInfo"
                        app:layout_constraintHorizontal_weight="3"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/dateInfo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_weight="8"
                        app:layout_constraintStart_toEndOf="@id/dateTitle"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="2022/07/05" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/timeTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/punch_time"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/timeInfo"
                        app:layout_constraintHorizontal_weight="3"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/timeInfo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_weight="8"
                        app:layout_constraintStart_toEndOf="@id/timeTitle"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="8:00 A.M." />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/punchImageLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/cardInfoLayout"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/punchImage"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:contentDescription="@string/punch_image_desc"
                    tools:src="@drawable/gohome" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardPunchLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/punchLabel">

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>